<resources>
    <string name="app_name">QuizApp Aptitude</string>
    <string name="app_name_2_line">QuizApp\nFree</string>
    <string name="app_series">QuizApp</string>
    <string name="app_fields">Arithmetic Reasoning | Logical Word Sequence | Blood Relations | Series Completion | Analogy</string>

    <string name="app_id">966500666857</string>
    <string name="package_name">com.prembros.aptitude.quizapp</string>
    <string name="achievement_rule_section_1">CgkI6Zu3v5AcEAIQBw</string>
    <string name="achievement_rule_section_2">CgkI6Zu3v5AcEAIQCA</string>
    <string name="achievement_rule_section_3">CgkI6Zu3v5AcEAIQCQ</string>
    <string name="achievement_rule_section_4">CgkI6Zu3v5AcEAIQCg</string>
    <string name="achievement_rule_section_5">CgkI6Zu3v5AcEAIQCw</string>
    <string name="achievement_streak_of_5">CgkI6Zu3v5AcEAIQDA</string>
    <string name="achievement_streak_of_10">CgkI6Zu3v5AcEAIQDQ</string>
    <string name="achievement_streak_of_20">CgkI6Zu3v5AcEAIQDg</string>
    <string name="achievement_streak_of_50">CgkI6Zu3v5AcEAIQDw</string>
    <string name="achievement_skippy">CgkI6Zu3v5AcEAIQEQ</string>
    <string name="achievement_positive_halfsies">CgkI6Zu3v5AcEAIQEg</string>
    <string name="achievement_negative_halfsies">CgkI6Zu3v5AcEAIQEw</string>
    <string name="achievement_neutral_halfsies">CgkI6Zu3v5AcEAIQGQ</string>
    <string name="achievement_equalizor">CgkI6Zu3v5AcEAIQFA</string>
    <string name="achievement_bummer">CgkI6Zu3v5AcEAIQFQ</string>
    <string name="achievement_bummer_king">CgkI6Zu3v5AcEAIQFg</string>
    <string name="achievement_emperor_of_bummerville">CgkI6Zu3v5AcEAIQFw</string>
    <string name="achievement_bummergod">CgkI6Zu3v5AcEAIQGA</string>
    <string name="leaderboard_arithmetic_reasoning">CgkI6Zu3v5AcEAIQAg</string>
    <string name="leaderboard_logical_word_sequence">CgkI6Zu3v5AcEAIQAw</string>
    <string name="leaderboard_blood_relations">CgkI6Zu3v5AcEAIQBA</string>
    <string name="leaderboard_series_completion">CgkI6Zu3v5AcEAIQBQ</string>
    <string name="leaderboard_analogy">CgkI6Zu3v5AcEAIQBg</string>

    <string name="colon"> : </string>
    <!--FIELDS-->
    <string name="arithmetic_reasoning">Arithmetic Reasoning</string>
    <string name="logical_word_sequence">Logical Word Sequence</string>
    <string name="blood_relations">Blood Relations</string>
    <string name="series_completion">Series Completion</string>
    <string name="analogy">Analogy</string>
    <string name="intro">Do you really have what it takes?\nTest your aptitude in the following fields:</string>
    <string name="intro_section">Now select a section\nand get on with the test!</string>

    <!--SECTIONS-->
    <string name="section_1">Section 1</string>
    <string name="section_2">Section 2</string>
    <string name="section_3">Section 3</string>
    <string name="section_4">Section 4</string>
    <string name="section_5">Section 5</string>

    <string name="title_activity_questions">Quiz</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">section: %1$d</string>
    <string name="title_activity_results">Results</string>

    <!--ABOUT PAGE STRINGS-->
    <string name="about_header">About</string>
    <string name="about_the_developers">About the developers</string>
    <string name="about_the_developers_details">
        Prem Suman and Prem Ankur
        \nYes we\'re brothers!
        \nEmail us at:</string>
    <string name="about_the_app">About the App</string>
    <string name="about_the_app_details">
        QuizApp is a series of android apps designed specially for the quiz minds.
        \nThis app consists of the quizzes related to aptitude.
        \n(Arithmetic Reasoning, Logical Word Sequence, Blood Relations, Series Completion &amp; Analogy)</string>
    <string name="other_apps_in_quizapp_series">Other apps in QuizApp series:</string>
    <string name="other_apps_in_quizapp_series_details">
        QuizApp-Programming
        \nQuizApp-Science(Coming soon)</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="special_thanks_details">My Parents for the support</string>

    <!--HELP PAGE STRINGS-->
    <string name="help_header">Help</string>
    <string name="help_choosing_a_section">Choosing a section</string>
    <string name="help_choosing_a_section_content">
        * You can choose a Section ranging from very easy up to very hard, depending on the time limit.
        \n\nThere are 5 sections in each field:
        \nSection 1, Section 2, Section 3, Section 4 &amp; Section 5.
    </string>
    <string name="help_during_the_quiz">During the quiz</string>
    <string name="help_during_the_quiz_content">
        * Long Press any action button on the page and it will tell you what it does!
        \n\n* You can change the section by clicking the \'up\' button.
        \n\n* To exit the quiz at any time, press the back button on the action bar.
        \n\n* There is also a skip option in the middle if you want to skip the current question.
    </string>
    <string name="help_bookmarks">Bookmarks</string>
    <string name="help_bookmarks_content">
        * Like a question and want to refer to it later? It is available in the pro version
        \n\n* Just click on \'add bookmark\' on the top right corner and that\'s it!
        \n\n* You can later view it in the Bookmarks section.
        \n\n* To remove a bookmark, just click on the darkened \'add bookmark\' and it will remove the bookmark!
    </string>
    <string name="help_want_more_features">Want no ads and more features?</string>
    <string name="help_want_more_features_content">
        * Ads can be disabled by purchasing the pro version \nwithout the \'FREE\' suffix.(Coming Soon!)
        \n\n* You can purchase the ad-free version From the Play Store.
        \n(or click below)</string>

<!--RATING-->
    <string name="rate_us">Rate this app?</string>

    <string name="skip_the_current_question">Skip the current question</string>
    <string name="previous_question">Previous question</string>
    <string name="next_question">Next Question</string>
    <string name="add_or_remove_bookmark">Add or remove bookmark</string>
    <string name="title_activity_login">Connect</string>
    <string name="results">Results</string>
    <string name="quiz_results">QuizResult</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="email_id">Email ID: </string>
    <string name="user_name">Username: </string>
    <string name="sign_in">Sign in</string>
    <string name="account">Account</string>
    <string name="detailed_results">Detailed Results</string>
    <string name="your_correct_answers">Your correct answers</string>
    <string name="your_incorrect_answers">Your incorrect answers</string>
    <string name="your_skipped_answers">Your skipped answers</string>
    <string name="close">Close</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="delete_this_question">Delete this question</string>

    <!--MENU LABELS-->
    <string name="clear_all">Clear all</string>
    <string name="get_pro">Get Pro version</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share">Share</string>
    <string name="email">itsprembros@gmail.com</string>
    <string name="prembros">PremBros</string>
    <string name="visit_us_at">Visit us at:</string>
    <string name="login_intro">Connect with Google Play and keep track of your performance, high scores and achievements.
        \n\nSee how your friends are doing and compete with them.
        \n\nTo get started, press the button below:
    </string>
    <string name="connect_to_google_play_games">Connect to Google Play Games</string>
    <string name="quiz">Quiz</string>
<!--
     <string name="ad_questions_first">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_questions_last">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_bookmark_click">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_results_return">ca-app-pub-3940256099942544/6300978111</string>
-->

    <!--ORIGINAL AD UNIT IDs-->
    <string name="ad_questions_first">ca-app-pub-0057541165660355/6435377083</string>
    <string name="ad_questions_last">ca-app-pub-0057541165660355/7912110282</string>
    <string name="ad_bookmark_click">ca-app-pub-0057541165660355/4958643883</string>
    <string name="ad_results_return">ca-app-pub-0057541165660355/9388843480</string>

    <string name="times_up">Times up!</string>
    <string name="get_pro_content">Pro version comes with the following features:
                        \n\n*No Ads
                        \n*Bookmark Feature
                        \n*New Questions
                        \n*Personal score history
                        \n\n*Also, the developers really appreciate your contribution!
    </string>
    <string name="get_pro_coming_soon">\n\nWe\'re currently working on the pro version. It will be available to you as soon as possible.</string>
    <string name="get_pro_redirect">You will now be taken to our Play Store page.
                                \nInstall "QuizApp Pro" from there.
    </string>
    <string name="rate_this_app">Rate this app</string>
    <string name="tutorial">Tutorial</string>
    <string name="introduction">Introduction</string>

</resources>