<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <com.prembros.aptitude.quizapp.CustomTextViewSemiLight
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/la_header"
        android:text="@string/leaderboard"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryTranslucent"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

    <com.prembros.aptitude.quizapp.CustomTextViewLight
        android:id="@+id/leaderboard_arithmetic_reasoning"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/arithmetic_reasoning"
        android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryTranslucent"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

    <com.prembros.aptitude.quizapp.CustomTextViewLight
        android:id="@+id/leaderboard_logical_word_sequence"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/logical_word_sequence"
        android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryTranslucent"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

    <com.prembros.aptitude.quizapp.CustomTextViewLight
        android:id="@+id/leaderboard_blood_relations"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/blood_relations"
        android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryTranslucent"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

    <com.prembros.aptitude.quizapp.CustomTextViewLight
        android:id="@+id/leaderboard_series_completion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/series_completion"
        android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryTranslucent"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

    <com.prembros.aptitude.quizapp.CustomTextViewLight
        android:id="@+id/leaderboard_analogy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/analogy"
        android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>